Update to Forge 36.2.42